--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,7 +1,4 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
@@ -9,7 +6,15 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/../build-debug/angular_dists/src/K3PiStudies",
-            "args": ["-f", "/share/lazy/pappenheimer/d2k3pi/data/selected_data_extended/2015/randomly_selected_RS_multiple_candidates.root", "-o", "/share/lazy/pappenheimer/d2k3pi/plots",  "-m", "RS", "--useLHCbStyle"],
+            "args": [
+                "-f",
+                "/share/lazy/pappenheimer/d2k3pi/data/selected_data_extended/2015/randomly_selected_RS_multiple_candidates.root",
+                "-o",
+                "/share/lazy/pappenheimer/d2k3pi/plots",
+                "-m",
+                "RS",
+                "--useLHCbStyle"
+            ],
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
             "environment": [],
@@ -27,6 +32,13 @@
                     "ignoreFailures": true
                 }
             ]
+        },
+        {
+            "name": "Python: compare_phsp_dists",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/plotting/compare_phsp_dists.py",
+            "justMyCode": true
         }
     ]
 }
